<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coverage_navigator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ingalexanderlevy@gmail.com">Alexander-Levy</maintainer>
  <license>Apache-2.0</license>

  <!-- Add dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_util</depend>
  <depend>nav2_bringup</depend>
  <depend>opennav_coverage_msgs</depend>
  <depend>opennav_coverage_bt</depend>
  <depend>opennav_coverage</depend>
  <depend>opennav_row_coverage</depend>
  <depend>opennav_coverage_navigator</depend>
  <depend>backported_bt_navigator</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
